test/semantics/programs/invalid/class-args-mismatch-params.guav
# Shouldn't pass since class instantiation arguments don't match class constructor function parameters

class Person {
    Person(name = "unnamed", height = 50.0, vocabulary = []) {
        this.name = name
        this.height = height
        this.vocabulary = vocabulary
    }
}

Allen = Person(43, "not a float", false)
